; ModuleID = '/home/carl/AnghaBench/git/extr_combine-diff.c_adjust_hunk_tail.c'
source_filename = "/home/carl/AnghaBench/git/extr_combine-diff.c_adjust_hunk_tail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sline = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.sline*, i64, i64, i64)* @adjust_hunk_tail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @adjust_hunk_tail(%struct.sline* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.sline*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.sline* %0, %struct.sline** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load i64, i64* %7, align 8
  %10 = add i64 %9, 1
  %11 = load i64, i64* %8, align 8
  %12 = icmp ule i64 %10, %11
  br i1 %12, label %13, label %26

13:                                               ; preds = %4
  %14 = load %struct.sline*, %struct.sline** %5, align 8
  %15 = load i64, i64* %8, align 8
  %16 = sub i64 %15, 1
  %17 = getelementptr inbounds %struct.sline, %struct.sline* %14, i64 %16
  %18 = getelementptr inbounds %struct.sline, %struct.sline* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* %6, align 8
  %21 = and i64 %19, %20
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %13
  %24 = load i64, i64* %8, align 8
  %25 = add i64 %24, -1
  store i64 %25, i64* %8, align 8
  br label %26

26:                                               ; preds = %23, %13, %4
  %27 = load i64, i64* %8, align 8
  ret i64 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
